# optima-college

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml
.github/: pull_request_template.md
.github/workflows/: ci.yml  data-pipeline.yml
contracts/: README.md
contracts/agent/: README.md
contracts/proto/optima/v1/: kernel.proto
docs/: ROADMAP.md
go-orchestrator/: go.mod  go.sum
go-orchestrator/cmd/server/: agent_handler.go  main.go  main_test.go  otel.go  weekly_bitmap.go
go-orchestrator/internal/agent/: embed.go  intent.go  intent_parse_test.go  intent_test.go  openai.go  prompt.go  schedule_intent_v1.schema.json
go-orchestrator/internal/kernelcb/: breaker.go  breaker_test.go
infra/bigquery/: README.md  schema.sql
infra/bigquery/dq/: row_sanity.sql
python-ml/: README.md  pyproject.toml
python-ml/src/optima_ingest/: __init__.py  bq_load.py  catalog_detail.py  cli.py  dq_check.py  gcs_bronze.py  models.py  wesmaps.py
python-ml/src/optima_python_ml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python-ml/tests/: test_catalog_detail.py  test_wesmaps_parser.py
rust-kernel/: Cargo.toml  build.rs
rust-kernel/benches/: optimize.rs
rust-kernel/benches/fixtures/: courses_99.csv  meetings_99.csv  sections_99.csv
rust-kernel/src/: conflicts.rs  grpc.rs  lib.rs  main.rs  optimize.rs  telemetry.rs  weekly_bitmap.rs
scripts/: bootstrap.sh
