[package]
name = "rust-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
csv = "1"
rayon = "1.10"
opentelemetry = "0.31.0"
# OTLP/HTTP only (same port as Go `otlptracehttp` — use e.g. `http://localhost:4318`)
opentelemetry-otlp = { version = "0.31.1", default-features = false, features = [
    "trace",
    "http-proto",
    "reqwest-blocking-client",
] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = "0.12"
tracing = "0.1.44"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "optimize"
harness = false
